Add toggle controller to hide/show elements

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,12 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 <p data-controller="hello">This text will change</p>
+
+<div data-controller="toggle" data-toggle-change-class="hidden">
+	<span data-action="click->toggle#toggle">Click me to activate the toggle_controller.toggle() function.</span>
+	<ul data-toggle-target="content">
+		<li>Item 1</li>
+		<li>Item 2</li>
+		<li>Item 3</li>
+	</ul>
+</div>
