Add checkbox that highlights the container div

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,3 +34,10 @@
 		<li>Item 6</li>
 	</ul>
 </div>
+
+<div data-controller="toggle" data-toggle-change-class="dropbtn">
+	<div data-toggle-target="content">
+		<input type="checkbox" data-action="click->toggle#toggle" name="checkbox_toggle">
+		<label for="checkbox_toggle">Click me to show a green box.</label>
+	<div>
+</div>
